# git-review-tool

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/: copilot-instructions.md
plans/: LINE_COMMENT_SPEC.md  MVP_TASKS.md  plan.md
src/git_review_tool/: cli.py  diff_parser.py  encoding_utils.py  git_ops.py  hunk_id.py  storage.py  syntax.py  webapp.py
src/git_review_tool/static/: app.js
src/git_review_tool/templates/: review.html
tests/: test_cli.py  test_diff_parser.py  test_e2e_workflow.py  test_encoding_utils.py  test_git_ops.py  test_hunk_id.py  test_storage.py  test_syntax.py  test_webapp.py
