[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "git-review-tool"
version = "0.1.0"
description = "ローカルFlaskサーバでgitコミットをレビューするツール"
requires-python = ">=3.8"
dependencies = [
    "flask>=3.0",
]

[project.scripts]
git-review-tool = "git_review_tool.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py38"]
